--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       type="module"
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
     ></script>
+    <script src="https://kit.fontawesome.com/97dc8af7a6.js" crossorigin="anonymous"></script>
     <!-- <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.0.1/model-viewer.min.js"></script> -->
   </head>
   <body>
